2006-09-12  Brian Warner  <warner@lothar.com>

	* buildbot/steps/shell.py: clean up test-case-name line, remove some
	unnecessary imports
	* buildbot/steps/dummy.py: same

2006-09-08  Brian Warner  <warner@lothar.com>

	* buildbot/steps/transfer.py (FileUpload,FileDownload): new
	BuildStep which lets you transfer files from the master to the
	slave or vice versa. Thanks to Albert Hofkamp for the original
	patch. Fixes SF#1504631.
	* buildbot/slave/commands.py (SlaveFileUploadCommand): slave-side
	support for it
	(SlaveFileDownloadCommand): same
	* docs/buildbot.texinfo (Transferring Files): document it
	* buildbot/test/test_transfer.py: test it
	* buildbot/test/runutils.py (StepTester): new utility class for
	testing BuildSteps and RemoteCommands without Builds or Bots or PB
	* buildbot/test/test_steps.py (CheckStepTester): validate that the
	utility class works

	* buildbot/interfaces.py (IStatusLog.readlines): make it easier to
	walk through StatusLogs one line at a time, mostly for the benefit
	of ShellCommand.createSummary methods. You can either walk through
	STDOUT or STDERR, but the default is STDOUT.

	* buildbot/status/builder.py (LogFile.readlines): implement it.
	Note that this is not yet memory-efficient, it just pulls the
	whole file into RAM and then splits it up with a StringIO.
	Eventually this should be a generator that only pulls chunks from
	disk as necessary.
	* buildbot/test/test_status.py (Log.testReadlines): test it

	* docs/buildbot.texinfo: update to match changes
	* buildbot/process/factory.py: stop using old definitions
	* buildbot/process/process_twisted.py: same
	* buildbot/test/test_*.py: same

	* buildbot/process/step_twisted.py: move definition to..
	* buildbot/steps/python_twisted.py: .. here, unfortunately python's
	relative-import mechanisms prevent this from being named 'twisted'
	or 'python/twisted' as I would have preferred.

	* buildbot/process/maxq.py: move definition to..